<resources>
    <string name="app_name">MusicTablet</string>
    <string name="search">Search...</string>
    <string name="_0">0</string>
    <string name="music_player">music player</string>
    <string name="rage_amp">Rage amp</string>
    <string name="drum_n_bass">Drum \'n\' Bass</string>
    <string name="playlist">Playlist</string>
    <string name="_05_14">05:14</string>
    <string name="em_cua_ngay_hom_qua">Em cua ngay hom qua</string>
    <string name="progress">Progress</string>
    <string name="album">Albums</string>
    <string name="songs">Songs</string>
    <string name="folders">Folders</string>
    <string name="_00_00">00:00</string>
    <string name="_05_00">05:00</string>
    <string name="home">Home</string>
    <string name="showing">Showing:</string>
    <string name="album_name">Album Name</string>
    <string name="create_new">Create new</string>
    <string name="playlist_name">playlist name</string>
    <string name="add">Add</string>
</resources>