<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvShowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/showing"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumberOfAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="10"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvShowing"
            app:layout_constraintTop_toTopOf="@id/tvShowing" />

        <TextView
            android:id="@+id/tvAlbums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvShowing"
            app:layout_constraintTop_toBottomOf="@id/tvShowing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListSong"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvShowing"
            app:layout_constraintTop_toBottomOf="@id/tvAlbums"
            app:layout_constraintWidth_percent="0.92"
            tools:listitem="@layout/item_playlist" />

        <TextView
            android:id="@+id/btnCreateNew"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/create_new"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/rvListSong"
            app:layout_constraintTop_toTopOf="@id/tvShowing" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>