<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/tvRageAmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/rage_amp"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/music_player"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvRageAmp"
            app:layout_constraintStart_toEndOf="@id/tvRageAmp" />

        <LinearLayout
            android:id="@+id/lnVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRageAmp"
            app:layout_constraintWidth_percent="0.3">

            <ImageView
                android:id="@+id/btnVolume"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_volume" />

            <SeekBar
                android:id="@+id/sbVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/blue_light"
                android:thumbTint="@color/blue_light" />

            <TextView
                android:id="@+id/tvSbValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_search"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="20dp"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@id/lnVolume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lnVolume"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="Autofill,RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edt_search"
            app:layout_constraintStart_toStartOf="@id/tvRageAmp"
            app:layout_constraintTop_toBottomOf="@id/tvRageAmp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container_view_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/view"
                app:layout_constraintEnd_toStartOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container_view_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.85"
                app:layout_constraintWidth_percent="0.52">


            </androidx.fragment.app.FragmentContainerView>

            <View
                android:id="@+id/view"
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_container_view_right"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>